--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,21 +1,21 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:65259",
+      "applicationUrl": "http://localhost:65259/MyBadges",
       "sslPort": 44398
     }
   },
   "profiles": {
     "BadgeMeUp": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7298;http://localhost:5298",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7298;http://localhost:5298",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
