--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,4 @@ FodyWeavers.xsd
 .DS_Store
 Thumbs.db
 appsettings.development.json
+/Properties/ServiceDependencies/badgemeup-staging - Zip Deploy
